--- a/Windows/GameBoardWindow.xaml
+++ b/Windows/GameBoardWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="GameBoard" Height="450" Width="800">
     <Grid>
-        
+        <GridBa
     </Grid>
 </Window>
